@@ -827,7 +827,7 @@ static StartupOptions initApp(DrawpileApp &app)
 		// Disable finerpainting if this device is detected to have a stylus.
 		bool hasStylus = utils::androidHasStylusInput();
 		settings.setOneFingerTouch(
-			int(hasStylus ? desktop::settings::OneFingerTouchAction::Draw
+			int(hasStylus ? desktop::settings::OneFingerTouchAction::Pan
 						  : desktop::settings::OneFingerTouchAction::Guess));
 	}
 
